syntax = "proto3";

option csharp_namespace = "GrpcPerformanceComparison";

package greet;

// 定义服务
service Greeter {
  // 简单 RPC
  rpc SayHello (HelloRequest) returns (HelloReply);
  
  // 流式 RPC（用于测试流性能）
  rpc SayHelloStream (HelloRequest) returns (stream HelloReply);
}

// 请求消息
message HelloRequest {
  string name = 1;
  int32 id = 2;
  repeated string tags = 3;
  map<string, string> metadata = 4;
}

// 响应消息
message HelloReply {
  string message = 1;
  int32 id = 2;
  int64 timestamp = 3;
}

